<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Smart Lock</string>
    <string name="action_settings">Settings</string>
    <string name="please_input_pwd">Enter your password</string>
    <string name="please_input_pwd_again">Verify your new passwod</string>
    <string name="setting_pwd_success">Password setting successfully</string>
    <string name="forget_pwd">Forget password？</string>
    <string name="delete">Delete</string>
    <string name="home_rd">Home</string>
    <string name="me_rd">Me</string>
    <string name="lock_manager">Lock Management</string>
    <string name="back_message">Click again to exit the APP</string>
    <string name="bt_state">BLE status:</string>
    <string name="bt_unconnected">Not Conn</string>
    <string name="bt_reconnect">Re-connected</string>
    <string name="bt_setting">Settings</string>
    <string name="bt_update_time">Updated time:</string>
    <string name="system_setting">System Settings</string>
    <string name="card_manager">NFC</string>
    <string name="password_manager">Password </string>
    <string name="fingerprint_manager">Fingerprint </string>
    <string name="permission_manager">Users</string>
    <string name="token_manager">Temp Pwd</string>
    <string name="event_manager">Unlock Record</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Log in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">The password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="about_us">About Us</string>
    <string name="title_activity_settings">Settings</string>
    <string name="check_fingerprint">Please verify the existing fingerprints</string>
    <string name="cancel">Cancel</string>
    <string name="add_lock">New Lock</string>
    <string name="choose_add_way">Choose one of the following ways to add</string>
    <string name="input_code_of_tag_or_scan_qr">Scan the QR code on the device label</string>
    <string name="title_scan_qr">Scan the QR code</string>
    <string name="input_authorization_code">Enter the authorization code</string>
    <string name="manual_addition">Manually Add</string>
    <string name="empty_lock">No Lock</string>
    <string name="lock_detection">Lock verification</string>
    <string name="tv_scan_lock">Searching</string>
    <string name="please_approach_lock">Pls keep the phone close to the lock</string>
    <string name="title_activity_base_fp">BaseFPActivity</string>
    <string name="temp_pwd_valid">Valid</string>
    <string name="temp_pwd_invalid">Invalid</string>
    <string name="temp_pwd">Temporary Password</string>
    <string name="temp_pwd_username">User</string>
    <string name="btn_create_temp_pwd">New Temp Pwd</string>
    <string name="str_is_empty">String is empty</string>
    <string name="click_to_copy">Click to copy</string>
    <string name="temp_pwd_failure_time">Failure Time</string>
    <string name="password">Password</string>
    <string name="replicating_success">Copied</string>
    <string name="battery_0">0%</string>
    <string name="battery_10">10%</string>
    <string name="battery_20">20%</string>
    <string name="battery_30">30%</string>
    <string name="battery_50">50%</string>
    <string name="battery_60">60%</string>
    <string name="battery_70">70%</string>
    <string name="battery_80">80%</string>
    <string name="battery_100">100%</string>
    <string name="confirm">Confirm</string>
    <string name="share">Share</string>
    <string name="temp_password">***</string>
    <string name="unconnected_device">Not Connected</string>
    <string name="bt_connect_failed">Connection failed</string>
    <string name="bt_connect_success">Connected</string>
    <string name="ble_instruction">Unlock</string>
    <string name="numeric_keyboard_down">numeric keyboard down</string>
    <string name="numeric_keyboard_up">numeric keyboard up</string>
    <string name="numeric_keyboard_cancel">numeric keyboard cancel</string>
    <string name="scan_qr">Scan QR</string>
    <string name="create_pwd">"New Password  "</string>
    <string name="modify_pwd">Change Password</string>
    <string name="rescanning">Re-scanning</string>
    <string name="please_check">Pls check:</string>
    <string name="please_check1">1. Is the device power on ?</string>
    <string name="please_check2">2. Is Bluetooth connected?</string>
    <string name="please_check3">3. If the device only supports Bluetooth, please make sure that Bluetooth is turned on.</string>
    <string name="please_check_end">4.If you can\'t add it after checking, Pls reset the device</string>
    <string name="ble_not_supported">BLE is Not Supported</string>
    <string name="ble_scan_failed">Search failed</string>
    <string name="add_lock_success">Added successfully</string>
    <string name="LogUtil_add_lock_success">Added successfully!</string>
    <string name="LogUtil_add_lock_falied">Added failed</string>
    <string name="checking_security">Safety Confirming</string>
    <string name="add_locking">Generating Device</string>
    <string name="retry_connect">Connection timed out, please reconnect...</string>
    <string name="plz_set_lock_name">Please set the name of the door lock (max length:6):</string>
    <string name="lock_default_name">SmartLock</string>
    <string name="battery_unknow">Unknown</string>
    <string name="device_sync">Sync</string>
    <string name="add_card">New NFC</string>
    <string name="set_pwd_success">Password setting successfully</string>
    <string name="modify_pwd_success">Change password successfully</string>
    <string name="pause_user_success">Suspend user successfully</string>
    <string name="pause_user_failed">Suspend user failed</string>
    <string name="add_user_success">New user successfully</string>
    <string name="add_user_failed">New user failed</string>
    <string name="delete_user_success">Delete user successfully</string>
    <string name="delete_user_failed">Delete user failed</string>
    <string name="add_nfc_failed">New NFC card failed</string>
    <string name="modify_nfc_failed">NFC card modification failed</string>
    <string name="delete_nfc_success">Delete card successfully</string>
    <string name="modify_nfc_success">NFC card modification successfully</string>
    <string name="add_pwd_failed">Failed to enter password</string>
    <string name="delete_pwd_success">Delete password successfully</string>
    <string name="add_fp_failed">Failed to enter the fingerprint</string>
    <string name="modify_fp_failed">Fingerprint modification failed</string>
    <string name="modify_fp_success">Fingerprint modification successfully</string>
    <string name="create_time">Creation time:</string>
    <string name="add_nfc_tips">You have added the card, please delete and add</string>
    <string name="add_pwd_tips">You have added the password, please delete and add</string>
    <string name="add_fp_tips">Fingerprint records are full, please delete and add.</string>
    <string name="plz_reconnect">Device connection failed, please reconnect!</string>
    <string name="add_password">New Password</string>
    <string name="add_fingerprint">New Fingerprint</string>
    <string name="user_name">Name:</string>
    <string name="edit">Edit</string>
    <string name="input_new_pwd">Please enter a new password:</string>
    <string name="input_new_pwd_again">Please confirm the password:</string>
    <string name="tips">Tips</string>
    <string name="valid_password">Please enter the correct password</string>
    <string name="pwd_twice_error">Passwords inconsistent, please enter again</string>
    <string name="plz_input_username">Please enter user</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="title_event">Event</string>
    <string name="event_type">Type number:</string>
    <string name="remote">Remote</string>
    <string name="plz_choise_del_log">Please select the log to delete</string>
    <string name="plz_scan_correct_qr">Please scan the correct two-dimensional code!</string>
    <string name="administrator">Admin</string>
    <string name="members">Ordinary users</string>
    <string name="tmp_user">Temporary users</string>
    <string name="del_log_failed">Delete logs successfully</string>
    <string name="no_authority">No permission</string>
    <string name="del_all_pwd">Delete all passwords</string>
    <string name="del_all_fp">Delete all fingerprints</string>
    <string name="del_all_nfc">Delete all NFC</string>
    <string name="del_all_user">Delete all users</string>
    <string name="normal">Normal</string>
    <string name="pause">Suspend</string>
    <string name="invalid">Invalid</string>
    <string name="unable">Not enabled</string>
    <string name="create_user">New User</string>
    <string name="add_user_tips">Records are full, please delete and add</string>
    <string name="mine_certify_select">Selected</string>
    <string name="all_election">Select all</string>
    <string name="plz_choise_del_user">Please select the user to delete</string>
    <string name="recovery">Recovery</string>
    <string name="recovery_user_success">Restore user successfully</string>
    <string name="recovery_user_failed">The recovery user fails, the user is outside the life cycle</string>
    <string name="delete_key_success">Delete the unlock information successfully</string>
    <string name="delete_key_failed">Deleting the unlock information failed</string>
    <string name="delete_users_success">Group deletion user successfully</string>
    <string name="delete_users_failed">Group deletion user failed</string>
    <string name="device_management">Device Management</string>
    <string name="btn_add_new_lock">NEW LOCK</string>
    <string name="number">Number</string>
    <string name="set_default">Set as Default</string>
    <string name="unbind">Unbind</string>
    <string name="lock_settings">Lock Settings</string>
    <string name="intelligent_lock">Smart Key Cylinder</string>
    <string name="anti_prizing_alarm">Anti-prying Alarm</string>
    <string name="combination_lock">Combination Unlocking</string>
    <string name="rolled_back_time">Lockback Time</string>
    <string name="s_5">5s</string>
    <string name="s_8">8s</string>
    <string name="s_10">10s</string>
    <string name="restore_warning">Restoring the factory settings will delete all data in the device and APP.     Whether to continue?</string>
    <string name="warning">Warning</string>
    <string name="searched_dev">Searched Lock</string>
    <string name="search_lock">Search for Nearby Locks</string>
    <string name="friend_tip_title">Tips</string>
    <string name="choise_photo">Change Avatar</string>
    <string name="camera_shot">Camera new photo</string>
    <string name="local_photo">Choose from the preset photos</string>
    <string name="gallery_photo">Choose from the Album</string>
    <string name="retrieve_title">Retrieve Device</string>
    <string name="retrieve_dev_by_scan">Retrieve device by scanning</string>
    <string name="retrieve_dev_by_search">Retrieve device by search</string>
    <string name="del_all_face">Delete All Face</string>
</resources>