<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.UserManagerActivity">

    <item
        android:id="@+id/item_edit"
        android:icon="@mipmap/b_log_recents_delete"
        android:orderInCategory="100"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/del_all_pwd"
        android:orderInCategory="100"
        android:title="@string/del_all_pwd"
        app:showAsAction="never" />
    <item
        android:id="@+id/del_all_fp"
        android:orderInCategory="100"
        android:title="@string/del_all_fp"
        app:showAsAction="never" />
    <item
        android:id="@+id/del_all_card"
        android:orderInCategory="100"
        android:title="@string/del_all_nfc"
        app:showAsAction="never" />
    <item
        android:id="@+id/del_all_user"
        android:orderInCategory="100"
        android:title="@string/del_all_user"
        app:showAsAction="never" />
</menu>
