<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_warning_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/transparent_grey"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_dialog_warning"
            android:contentDescription="@string/warning"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:textSize="18dp"
            android:textColor="@color/light_red"
            android:text="@string/warning"/>
    </LinearLayout>


    <TextView
        android:id="@+id/warning_tip_tv"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="#f0f0f0"
        android:textSize="15sp"
        android:text="@string/restore_warning"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="20dp"/>
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/box_corners_radius_25">
        <Button
            android:id="@+id/warning_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_warning_left_selector"
            android:textColor="@color/white"
            android:text="@string/cancel"
            android:onClick="warningOnClick"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/alpha_gray"/>
        <Button
            android:id="@+id/warning_confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_warning_right_selector"
            android:textColor="@color/alpha_gray"
            android:text="@string/confirm"
            android:enabled="false"
            android:onClick="warningOnClick"/>

    </LinearLayout>
</LinearLayout>
