<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/design_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/x15dp"
    android:paddingRight="@dimen/x15dp"
    android:paddingBottom="@dimen/y15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/box_corners_white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/x15dp"
        android:paddingRight="@dimen/x15dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/retrieve_title"
            android:textColor="@color/black_de"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dip"
            android:background="@color/line" />

        <TextView
            android:id="@+id/tv_retrieve_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button_radius_10"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/retrieve_dev_by_scan" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dip"
            android:background="@color/line"
            android:paddingLeft="25dp"
            android:paddingRight="25dp" />

        <TextView
            android:id="@+id/tv_retrieve_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button_radius_10"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/retrieve_dev_by_search" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dip"
            android:background="@color/line"
            android:paddingLeft="25dp"
            android:paddingRight="25dp" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/cancel"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>
