<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_tips_with_cancel_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/x19dp"
    android:paddingRight="@dimen/x19dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/x78dp"
            android:background="@drawable/box_corners_dialog_title_radius_13"
            android:gravity="center"
            android:text="@string/friend_tip_title"
            android:textColor="@color/white"
            android:textSize="@dimen/d22sp" />

        <TextView
            android:id="@+id/tips_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x145dp"
            android:background="@color/white"
            android:gravity="center"
            android:paddingLeft="@dimen/x34dp"
            android:paddingRight="@dimen/x34dp"
            android:text="@string/tips"
            android:maxLines="2"
            android:textSize="@dimen/d19sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y82dp"
        android:background="@drawable/box_corners_dialog_btn_radius_13"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/x34dp"
        android:paddingRight="@dimen/x34dp">

        <Button
            android:id="@+id/dialog_cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y61dp"
            android:background="@drawable/selector_button_dialog_cancel"
            android:gravity="center"
            android:onClick="tipsOnClick"
            android:text="@string/cancel"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
